# AI-Machine_Learning_at_ENSPIMA

./: .gitignore  README.md  makefile  pyproject.toml
2024-2025/: README.md  pyml.yml
2024-2025/MiniProject/: 1-Load_CWRU_data.ipynb  2-Process_CWRU_data.ipynb  3-MiniProject.ipynb
2024-2025/Notebooks/: 1-Wake_up_your_Python-1.ipynb  2-Wake_up_your_Python-2.ipynb  ML2_DNN_part1.ipynb  ML2_DNN_part2.ipynb
2024-2025/Notebooks/solutions/: sol_1-Wake_up_your_Python-1.ipynb  sol_2-Wake_up_your_Python-2.ipynb
2024-2025/Notebooks/utils/: tools.py
MiniProject/: 1-Load_CWRU_data.ipynb  2-Process_CWRU_data.ipynb  3-MiniProject.ipynb
Notebooks/: 1-Wake_up_your_Python-1.ipynb  2-Wake_up_your_Python-2.ipynb  DL1_MNIST.ipynb  DL2_DNN_part1.ipynb  DL2_DNN_part2.ipynb
Notebooks/solutions/: sol_1-Wake_up_your_Python-1.ipynb  sol_2-Wake_up_your_Python-2.ipynb  sol_DL1_MNIST.ipynb  sol_DL2_DNN_part1.ipynb
Notebooks/utils/: tools.py
